--- a/meteringdevicesservice/src/main/resources/application.properties
+++ b/meteringdevicesservice/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/metering_devices_service
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=12345
 
+spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
+spring.liquibase.url=jdbc:postgresql://127.0.0.1:5432/metering_devices_service
+spring.liquibase.user=postgres
+spring.liquibase.password=12345
+
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.enabled=true
