MDS-11 Add authentication

--- a/meteringdevicesservice/src/main/resources/application.properties
+++ b/meteringdevicesservice/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.liquibase.password=12345
 
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
+
+jwt.token.secret=tpvsu
+jwt.token.expired=43200000
