--- a/meteringdevicesservice/pom.xml
+++ b/meteringdevicesservice/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>commons-text</artifactId>
 			<version>1.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
