--- a/meteringdevicesservice/pom.xml
+++ b/meteringdevicesservice/pom.xml
@@ -93,6 +93,15 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
             </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+                <configuration>
+                    <includeTarget>true</includeTarget>
+                    <appName>meteringdevicesservice</appName>
+                </configuration>
+            </plugin>
         </plugins>
         <finalName>meteringdevicesservice</finalName>
     </build>
